--- a/app/config/parameters-1and1.yml
+++ b/app/config/parameters-1and1.yml
@@ -1,17 +1,17 @@
 # This file is auto-generated during the composer install
 parameters:
-    database_host: db609093808.db.1and1.com
+    database_host:  
     database_port: null
-    database_name: db609093808
-    database_user: dbo609093808
-    database_password: Sdk56six
+    database_name:  
+    database_user: 
+    database_password: 
 
     mailer_transport: smtp
     mailer_encryption: ssl
     mailer_host: smtp.gmail.com
     mailer_user: jeremy.bernard.breizh@gmail.com
-    mailer_password: 19071984
+    mailer_password:  
     secret: ThisTokenIsNotSoSecretChangeIt
-    mail_to: jeremy.bernard.breizh@gmail.com
+    mail_to:  
 
     base: 'http://jeremy-bernar.info/my_project/'
