--- a/parameters.yml
+++ b/parameters.yml
@@ -4,12 +4,12 @@ parameters:
     database_port: 3306
     database_name: db609093808
     database_user: dbo609093808
-    database_password: Sdk56six
+    database_password: ----
 
     mailer_transport: smtp
     mailer_host: smtp.gmail.com
-    mailer_user: jeremy.bernard.breizh@gmail.com
-    mailer_password: 19071984
+    mailer_user: ----
+    mailer_password: ----
     secret: ThisTokenIsNotSoSecretChangeIt
     mail_to: jeremy.bernard.breizh@gmail.com
     base: 'http://jeremy-bernard.info/my_project/'
