--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -10,7 +10,7 @@ parameters:
     mailer_encryption: ssl
     mailer_host: smtp.gmail.com
     mailer_user: jeremy.bernard.breizh@gmail.com
-    mailer_password: 19071984
+    mailer_password: ********
     secret: ThisTokenIsNotSoSecretChangeIt
     mail_to: jeremy.bernard.breizh@gmail.com
     base: 'http://localhost/my_project/'
